--- a/front/package.json
+++ b/front/package.json
@@ -20,10 +20,8 @@
     "bootstrap-vue-3": "^0.1.13",
     "json-server": "^0.4.2",
     "pinia": "^2.0.15",
-    "vee-validate": "^4.6.0",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.16",
-    "yup": "^0.32.11"
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
