--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev-json": "json-server --watch db/posts.json --port 3002"
+    "post-json": "json-server --watch db/posts.json --port 3002",
+    "user-json": "json-server --watch db/users.json --port 3003"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
