--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.13",
     "json-server": "^0.4.2",
+    "multer": "^1.4.5-lts.1",
     "pinia": "^2.0.15",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
