--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "pinia": "^2.0.15",
     "vue": "^3.2.25",
     "vue-axios": "^3.4.1",
+    "vue-cli": "^2.9.6",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
