--- a/front/package.json
+++ b/front/package.json
@@ -20,9 +20,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.13",
+    "dotenv": "^16.0.3",
     "json-server": "^0.4.2",
     "multer": "^1.4.5-lts.1",
-    "pinia": "^2.0.15",
     "vue": "^3.2.25",
     "vue-axios": "^3.4.1",
     "vue-cli": "^2.9.6",
