--- a/front/package.json
+++ b/front/package.json
@@ -12,15 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-vue-3": "^0.1.13",
     "dotenv": "^16.0.3",
+    "eslint": "^8.25.0",
     "json-server": "^0.4.2",
     "multer": "^1.4.5-lts.1",
     "vue": "^3.2.25",
