--- a/back/env.example
+++ b/back/env.example
@@ -2,6 +2,6 @@ USER = connecte
 HOST = localhost
 DATABASE = connecte
 PASSWORD = XXXXX
-PORTDB = XXXXX
+PORTDB = 5432
 PORT = 4200
 JWT_PASSWORD = XXXXX
